refactor: textuelle und strukturelle CLI-Verbesserungen